# ITK-RSNA

./: NOTICE  README.md
Exercises/LevelSetSegmentation/: CMakeLists.txt  LevelSet.cxx  README
Exercises/LevelSetVisualization/: LevelSet.cxx
Exercises/Median/: CMakeLists.txt
Exercises/MedianFilter/: MedianImageFilter.cxx  README
Exercises/RegionGrowingSegmentation/: CMakeLists.txt  ConfidenceConnected.cxx  README
Exercises/RigidRegistration/: CMakeLists.txt  README  RigidRegistration.cxx
Exercises/SimpleITK/Python/: CONFIGURATION  CannyEdgeDetection01.py  MedianImageFilter01.py  README  RegionGrowingSegmentation01.py  RegionGrowingSegmentation02.py
